--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <div class="card">
             <h1>Will You Be Mine? 💖</h1>
             <div class="gif-container">
-                <img src="image4.gif" alt="Cute Love GIF">
+                <img src="Image4.gif" alt="Cute Love GIF">
             </div>
             <p class="message">I've fallen for you... Will you be my valentine? 🌹</p>
             <div class="buttons">
