--- a/no2.html
+++ b/no2.html
@@ -19,7 +19,7 @@
         <div class="card">
             <h1>💖 "You’re the only one my heart longs for... Will you be my Valentine? 💝"</h1>
             <div class="gif-container">
-                <img src="image5.jpg" alt="Cute Valentine GIF">
+                <img src="image5.gif" alt="Cute Valentine GIF">
             </div>
             <p class="message">❤️ "Every beat of my heart whispers your name... You're my forever! 💓"</p>
             <div class="buttons">
